--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <main class="documentation-page">
             <section>
-                <div class="responsive-video centered-content">
+                <div class="responsive-video">
                     <iframe title="vimeo-player" src="https://player.vimeo.com/video/825532023?h=acd641c746" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
@@ -42,14 +42,14 @@
                 <p>Originally, the plan was to generate virtual objects and integrate them into physical devices, utilizing real speakers and buttons. However, due to unforeseen challenges, the final presentation of the physical setup did not meet the my expectations. As a result, virtual versions of the black and white TV and speakers were developed, and a three.js scene was constructed to enhance control over lighting, space, position, materials, and size. </p>
                 <p>The project implementation involved the use of fragment and vertex shaders to create animations for the virtual objects. The three.js library built the 3D scene, imported the TV and speakers models, and incorporated an audio file. Data from the audio, mouse position, and GUI elements were then passed to the fragment shader to enable audience interaction with the virtual objects on the screen. </p>
                 
-                <div class="flex-container flex-basis-half">
-                    <div class="flex-item">
-                        <img src="../assets/images/tv.jpeg"/>
-                    </div>
-                    <div class="flex-item">
-                        <img src="../assets/images/speaker.jpg"/>
-                    </div>
-                </div>
+                <!-- <div class="flex-container flex-basis-half">
+                    <div class="page-img-s"> -->
+                        <img class="page-img-s" src="../assets/images/tv.jpeg"/>
+                    <!-- </div>
+                    <div class="page-img-s"> -->
+                        <img class="page-img-s" src="../assets/images/speaker.jpg"/>
+                    <!-- </div>
+                </div> -->
                 <!-- if you have a full width image try make it not too tall -->
                 <!-- <img src="../assets/images/tv.jpeg" width="50%" height="50%"/> -->
                 
