--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
         <!-- including for some global styling -->
         <link rel="stylesheet" href="../css/style.css">
-
+        <!-- if I had some styling I wanted to include on one special page -->
+        <link rel="stylesheet" href="css/demo-style.css">
     </head>
     <body>
         <!-- if you have sub-pages think about adding a simple back button -->
         <nav>
-            <a href="https://zhihengchen.github.io/Wcc-portfolio/">HOME</a>
+            <a href="../">HOME</a>
         </nav>
         <header class="documentation-header">
             <section class="center-text">
