--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 
                 <div class="flex-container flex-basis-half">
                     <div class="flex-item">
-                        <img src="../assets/images/tv.jpeg"/>
+                        <img src="assets/images/tv.jpeg"/>
                     </div>
                     <div class="flex-item">
                         <img src="../assets/images/speaker.jpg"/>
