--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="assets/images/tv.jpeg"/>
                     </div>
                     <div class="flex-item">
-                        <img src="../assets/images/speaker.jpg"/>
+                        <img src="assets/images/speaker.jpg"/>
                     </div>
                 </div>
                 <!-- if you have a full width image try make it not too tall -->
@@ -60,22 +60,22 @@
                 <!-- example of styling for three images, you can write your own styling -->
                 <div class="flex-container flex-basis-third">
                     <div class="flex-item">
-                        <img src="../assets/images/fragment.png"/>
+                        <img src="assets/images/fragment.png"/>
                     </div>
                     <div class="flex-item">
-                        <img src="../assets/images/whitemodel.png"/>
+                        <img src="assets/images/whitemodel.png"/>
                     </div>
                     <div class="flex-item">
-                        <img src="../assets/images/scene.png"/>
+                        <img src="assets/images/scene.png"/>
                     </div>
                 </div>
 
                     <div class="flex-container flex-basis-half">
                     <div class="flex-item">
-                        <img src="../assets/images/code1.png"/>
+                        <img src="assets/images/code1.png"/>
                     </div>
                     <div class="flex-item">
-                        <img src="../assets/images/code2.png"/>
+                        <img src="assets/images/code2.png"/>
                     </div>
                 </div>
                 
