--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>WCC Portfolio - Demo Page</title>
 
         <!-- including for some global styling -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
