--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <!-- if you have sub-pages think about adding a simple back button -->
         <nav>
-            <a href="https://zhihengchen.github.io/Wcc-portfolio/">HOME</a>
+            <a href="..">HOME</a>
         </nav>
         <header class="documentation-header">
             <section class="center-text">
